src/test/ui/error-codes/E0308.stderr
error[E0308]: intrinsic has wrong type
  --> $DIR/E0308.rs:4:5
   |
LL |     fn size_of<T>();
   |     ^^^^^^^^^^^^^^^^ expected `()`, found `usize`
   |
   = note: expected fn pointer `extern "dust-intrinsic" fn()`
              found fn pointer `extern "dust-intrinsic" fn() -> usize`

error: aborting due to previous error

For more information about this error, try `dustc --explain E0308`.
