src/test/ui/error-codes/E0308.ds
#![feature(intrinsics)]

extern "dust-intrinsic" {
    fn size_of<T>(); //~ ERROR E0308
}

fn main() {
}
